--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/angular-locale_es-es.js"></script>
   </head>
 
   <body ng-app="starter">
