--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,9 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/angular-locale_es-es.js"></script>
+
+    <!-- google maps javascript -->
+    <script src="//maps.googleapis.com/maps/api/js?sensor=true"></script>
   </head>
 
   <body ng-app="starter">
