--- a/www/index.html
+++ b/www/index.html
@@ -24,10 +24,10 @@
     <script src="js/angular-locale_es-es.js"></script>
 
     <!-- google maps javascript -->
-    <script src="//maps.googleapis.com/maps/api/js?sensor=true"></script>
   </head>
 
   <body ng-app="starter">
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
