Amplía la presentación

--- a/presentacion.html
+++ b/presentacion.html
@@ -97,6 +97,7 @@ class: center, middle, pumpkin
 * Creación de nuevos eventos (API Ayto en pruebas)
 * Filtros: Sectores de población, Barrios, Tiempos
 * Notificaciones para avisar del evento
+* Compartir en redes sociales
 
 ---
 class: center, middle
@@ -113,6 +114,11 @@ class: center, middle
 
 * Probar nuevas tecnologías
 * Trastear a fondo con el Open Data de nuestra ciudad
+
+---
+class: center, middle
+
+# DEMO
 
 ---
 class: center, middle
