Sube los cambios de ultimísima hora en la presentación

--- a/presentacion.html
+++ b/presentacion.html
@@ -73,7 +73,7 @@ class: center, middle, pumpkin
 ---
 class: center, middle, belize
 
-# Potencial Social
+# Potencial Social y Ciudadano
 
 * Incrementar visibilidad de eventos de la ciudad
 * Promocionar los eventos en redes sociales
