--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 <meta http-equiv="refresh" content="0; url=./www/index.html">
+    <!-- OpenGraph Meta Tags -->
+    <meta property="og:type" content="Website">
+    <meta property="og:url" content="http://laAgendica.com"/>
+    <meta property="og:title" content="LaAgendica"/>
+    <meta property="og:description" content="Eventos de Zaragoza en la palma de tu mano"/>
+    <meta property="og:image" content="http://laAgendica.com/resources/card_social.png"/>
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:title" content="LaAgendica"/>
+    <meta name="twitter:description" content="Eventos de Zaragoza en la palma de tu mano"/>
+    <meta name="twitter:image" content="http://laAgendica.com/resources/card_social.png"/>
+    <meta name="twitter:site" content="http://laAgendica.com"/>
+    <meta name="twitter:creator" content="LaAgendica"/>
