Modifica el title y meta description

--- a/www/index.html
+++ b/www/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
-
+    <title>LaAgendica, Eventos de Zaragoza en la palma de tu mano</title>
+    <meta name="description" content="LaAgendica, Eventos de Zaragoza en la palma de tu mano">
+    <meta name="HandheldFriendly" content="True">
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
@@ -22,8 +23,6 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/angular-locale_es-es.js"></script>
-
-    <!-- google maps javascript -->
   </head>
 
   <body ng-app="starter">
