--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="LaAgendica">
+    <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black"> -->
+
     <title>LaAgendica, Eventos de Zaragoza en la palma de tu mano</title>
     <meta name="description" content="LaAgendica, Eventos de Zaragoza en la palma de tu mano">
     <meta name="HandheldFriendly" content="True">
