--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <meta name="twitter:title" content="LaAgendica"/>
     <meta name="twitter:description" content="Eventos de Zaragoza en la palma de tu mano"/>
     <meta name="twitter:image" content="http://laAgendica.com/resources/card_social.png"/>
-    <meta name="twitter:site" content="http://laAgendica.com"/>
-    <meta name="twitter:creator" content="LaAgendica"/>
+    <meta name="twitter:url" content="http://laAgendica.com"/>
+    <meta name="twitter:creator" content="@LaAgendica"/>
+    <meta name="twitter:site" content="@LaAgendica"/>
+    <meta name="twitter:domain" content="laAgendica.com"/>
 
     <meta http-equiv="refresh" content="0; url=./www/index.html">
