--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <meta name="twitter:url" content="http://laAgendica.com"/>
     <meta name="twitter:creator" content="@LaAgendica"/>
     <meta name="twitter:site" content="@LaAgendica"/>
-    <meta name="twitter:domain" content="laAgendica.com"/>
+    <meta name="twitter:domain" content="*.laAgendica.com"/>
 
     <meta http-equiv="refresh" content="0; url=./www/index.html">
