[PoC ApiSemanaSantaProvider] Implementación del primer servicio para abstraer en él las llamadas a los APIs.
- quita la morraña del JSON offline, dejando sólo el array de objetos.
- La llamada en el controller usa 'query()' que es un 'get()' con isArray=true. Es decir, query para listas de objetos. get para un objeto.
- Para probarlo re-añadir la sección de Semana Santa al menú (revert del commit 2e9b256)

--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/angular-resource/angular-resource.min.js"></script>
 
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
@@ -35,6 +36,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/angular-locale_es-es.js"></script>
     <script>
