--- a/www/index.html
+++ b/www/index.html
@@ -51,7 +51,7 @@
     </script>
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="laAgendica">
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <ion-nav-view></ion-nav-view>
   </body>
