--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,10 @@
     <link href="css/style.css" rel="stylesheet">
 
     <link rel="shortcut icon" href="/resources/favicon.ico" type="image/x-icon" />
+    <link rel="icon" type="image/png" href="/resources/favicon-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="/resources/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="/resources/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/resources/favicon-32x32.png" sizes="32x32">
     <link rel="apple-touch-icon" href="/resources/apple-touch-icon.png" />
     <link rel="apple-touch-icon" sizes="57x57" href="/resources/apple-touch-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="/resources/apple-touch-icon-72x72.png" />
