--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,7 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <script src="js/angular-ios9-uiwebview.patch.js"></script>
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
