--- a/www/index.html
+++ b/www/index.html
@@ -57,7 +57,7 @@
   </head>
 
   <body ng-app="laAgendica">
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
