Añade búsqueda a Hoy: filtra en su array de eventos

--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,7 @@
     <meta name="description" content="LaAgendica, Eventos de Zaragoza en la palma de tu mano">
     <meta name="HandheldFriendly" content="True">
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link rel="stylesheet" href="lib/ionic-filter-bar/dist/ionic.filter.bar.css">
     <link href="css/style.css" rel="stylesheet">
 
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/jrub/LaAgendica/master/resources/favicon.ico" type="image/x-icon" />
@@ -30,6 +31,7 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/angular-resource/angular-resource.min.js"></script>
+    <script src="lib/ionic-filter-bar/dist/ionic.filter.bar.js"></script>
 
     <!-- Only used by Semana Santa
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
