--- a/www/index.html
+++ b/www/index.html
@@ -10,8 +10,8 @@
     <title>LaAgendica, Eventos de Zaragoza en la palma de tu mano</title>
     <meta name="description" content="LaAgendica, Eventos de Zaragoza en la palma de tu mano">
     <meta name="HandheldFriendly" content="True">
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link rel="stylesheet" href="lib/ionic-filter-bar/dist/ionic.filter.bar.css">
+    <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="lib/ionic-filter-bar/dist/ionic.filter.bar.min.css">
     <link href="css/style.css" rel="stylesheet">
 
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/jrub/LaAgendica/master/resources/favicon.ico" type="image/x-icon" />
@@ -29,9 +29,9 @@
     <link rel="apple-touch-icon" sizes="152x152" href="https://raw.githubusercontent.com/jrub/LaAgendica/master/resources/apple-touch-icon-152x152.png" />
 
     <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ionic/js/ionic.bundle.min.js"></script>
     <script src="lib/angular-resource/angular-resource.min.js"></script>
-    <script src="lib/ionic-filter-bar/dist/ionic.filter.bar.js"></script>
+    <script src="lib/ionic-filter-bar/dist/ionic.filter.bar.min.js"></script>
 
     <!-- Only used by Semana Santa
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
