Forzar a Twitter a refrescar el Twitter Card

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:title" content="LaAgendica"/>
     <meta name="twitter:description" content="Eventos de Zaragoza en la palma de tu mano"/>
-    <meta name="twitter:image:src" content="http://laAgendica.com/resources/card_social.png"/>
+    <meta name="twitter:image:src" content="http://laAgendica.com/resources/card_social.png?v1.1"/>
     <meta name="twitter:url" content="http://laAgendica.com"/>
     <meta name="twitter:creator" content="@LaAgendica"/>
     <meta name="twitter:site" content="@LaAgendica"/>
